Align inventory and name TAB compatibility